Fix vertical overflow with short viewport

--- a/style.css
+++ b/style.css
@@ -10,14 +10,12 @@ ul, li {
 }
 
 body{
-  height: 100vh;
-  width: 100vw;
   margin: 0;
 }
 
 .container{
-  width: 100%;
-  height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
   display: grid;
   grid-template-rows: 1fr 6fr;
   grid-template-columns: 1fr 3.75fr;
